# electionleaflets

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Gemfile  INSTALL  Makefile  Pipfile  Procfile  README.md  app.json  bower.json  deploy-requirements.txt  docker-compose.yml  fixed_postcodes.tsv  gulpfile.js  manage.py  package-lock.json  package.json  postdeploy.sh  public-access-template.yaml  pyproject.toml  renovate.json5  requirements.txt  serverless.yml  template.yaml  zappa_settings.json
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: uv-lock.yaml
docs/: configuration.md
electionleaflets/: __init__.py  celery.py  celery_runner.py  lambda_awsgi.py  storages.py  urls.py  wsgi.py
electionleaflets/apps/analysis/: forms.py  legacy_data.csv  models.py  urls.py  views.py
electionleaflets/apps/analysis/migrations/: 0001_initial.py  0002_auto_20160403_1456.py  0002_leafletproperties_user.py  0003_add_missing_people.py  0004_auto_20210424_1221.py  0005_alter_leafletproperties_options.py
electionleaflets/apps/analysis/templatetags/: percent_tags.py
electionleaflets/apps/analysis/tests/: test_forms.py  test_leaflet_queryset.py  test_views.py
electionleaflets/apps/api/: feeds.py  helpers.py  serializers.py  urls.py  views.py
electionleaflets/apps/api/tests/: test_create_leaflet.py  test_feeds.py  test_views.py
electionleaflets/apps/categories/: admin.py  models.py  urls.py  views.py
electionleaflets/apps/categories/templatetags/: category_tags.py
electionleaflets/apps/constituencies/: admin.py  forms.py  models.py  urls.py  views.py
electionleaflets/apps/constituencies/fixtures/: constituencies.json
electionleaflets/apps/constituencies/migrations/: 0001_initial.py  0002_delete_constituency.py
electionleaflets/apps/constituencies/templatetags/: constituency_tags.py
electionleaflets/apps/content/: admin.py  models.py
electionleaflets/apps/content/migrations/: 0001_initial.py
electionleaflets/apps/content/templatetags/: content_tags.py
electionleaflets/apps/core/: admin.py  conftest.py  constants.py  context_processors.py  forms.py  helpers.py  models.py  s3_thumbnail_store.py  storage_helpers.py  test_forms.py  test_models.py  views.py
electionleaflets/apps/core/migrations/: 0001_initial.py  0002_delete_country_delete_emailalert_delete_emailque_and_more.py
electionleaflets/apps/core/templatetags/: klass.py  markdown.py
electionleaflets/apps/elections/: admin.py  models.py
electionleaflets/apps/leaflets/: admin.py  constants.py  feeds.py  fields.py  filters.py  forms.py  managers.py  middleware.py  mixins.py  models.py  tasks.py  urls.py  views.py
electionleaflets/apps/legacy/: models.py  routers.py
electionleaflets/apps/parties/: urls.py  views.py
electionleaflets/apps/people/: devs_dc_helpers.py  models.py  urls.py  views.py
electionleaflets/apps/tags/: admin.py  models.py  urls.py  views.py
electionleaflets/assets-src/javascript/: admin.js
electionleaflets/assets-src/stylesheets/: analysis_team.scss  main.scss  select_widget.scss  vars.scss
electionleaflets/assets/javascript/: app.js  image_uploader.js
electionleaflets/assets/scss/: .gitignore  styles.scss
electionleaflets/assets/stylesheets/: select-list.scss  styles.scss
electionleaflets/media/javascript/: electionleaflets.main.min.js
electionleaflets/media/stylesheets/: main.min.css
electionleaflets/settings/: base.py  base_lambda.py  local.py.example  testing.py  zappa.py
electionleaflets/templates/: 404.html  500.html  base.html  footer.html  navigation.html
electionleaflets/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  email_confirmed.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
electionleaflets/templates/analysis/: candidate_tagging.html  index.html  index1.html  no_candidates.html  reports.html  tag_leaflets.html  task.html
electionleaflets/templates/api/: index.html
electionleaflets/templates/boundaries/: leaflets.html  map.html
electionleaflets/templates/categories/: category.html  index.html
electionleaflets/templates/constituencies/: constituency.html  constituency_detail.html  constituency_list.html  index.html  notspots.html
electionleaflets/templates/core/: about.html  donate.html  home.html  home_back.html  maintenance.html  pager.html  press.html  press_signup_thanks.html  press_signup_thanks_done.html  report_abuse.html  report_sent.html  test.html
electionleaflets/templates/leaflets/: add.html  add_step2.html  by_election_id.html  full.html  full_all.html  image_crop.html  image_rotate.html  index.html  leaflet.html  leaflet_update_publisher.html  moderation_queue.html
electionleaflets/templates/parties/: attacking_party.html  index.html  party.html  party_detail.html  party_list.html
electionleaflets/templates/people/: person.html
electionleaflets/templates/tags/: index.html  tag.html
lambda-layers/DependenciesLayer/: Makefile
requirements/: base.txt  dev.txt
samconfig.toml.d/: ci-production.toml  ci-staging.toml
scripts/: code-check.sh  code-format.sh  format.sh  lint.sh
tests/: README.md  test_leaflet_upload.spec.js  test_thumbs_function.py
tests/test_images/: heif_test.heif  tiff_test.tiff
thumbs/: .gitignore  Makefile  Pipfile  README.md  attach_lambda_triggers.py  handler.py  pyproject.toml  template.yml
thumbs/samconfig.toml.d/: ci-production.toml  ci-staging.toml
thumbs/src/: handler.py
(+106 files in other folders)
