[build-system]
name = "ElectionLeaflets"
version = "3.0-alpha"
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["thumbs"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "electionleaflets.settings.testing"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db --tb=short -p no:warnings"
django_debug_mode = true

[tool.ruff]
line-length = 80
lint.ignore = ["E501"]
lint.extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]
