[project]
name = "ElectionLeaflets"
version = "0.0.0"
description = "An online archive of political leaflets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-pagination==2.4.0",
    "django-braces==1.16.0",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "django-formtools==2.2",
    "django-localflavor==4.0",
    "django-pipeline==3.1.0",
    "django-s3file==5.5.7",
    "django-ses==4.3.0",
    "django-static-jquery==2.1.4",
    "django-storages==1.13.2",
    "django==4.2.18",
    "djangorestframework==3.15.2",
    "factory-boy==3.3.1",
    "markdown==3.7",
    "piexif==1.0.12",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.10",
    "sorl-thumbnail==12.11.0",
    "sentry-sdk==2.19.0",
    "python-slugify==8.0.4",
    "requests==2.32.3",
    "aws-wsgi",
    "dc-design-system",
    "dc-django-utils",
    "django-uk-political-parties",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["thumbs"]

[tool.uv.sources]
aws-wsgi = { git = "https://github.com/DemocracyClub/awsgi.git", rev = "b286f129c5580547577f942c75be74cdca707386" }
dc-design-system = { git = "https://github.com/DemocracyClub/design-system.git", tag = "0.6.0" }
dc-django-utils = { git = "https://github.com/DemocracyClub/dc_django_utils.git", tag = "7.0.1" }
django-uk-political-parties = { git = "https://github.com/DemocracyClub/django-uk-political-parties.git", rev = "86ffa51f8306858c379c9de5be2f4bdb24b3a910" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "electionleaflets.settings.testing"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db --tb=short -p no:warnings"
django_debug_mode = true

[tool.ruff]
line-length = 80
lint.ignore = ["E501"]
lint.extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "pytest-playwright==0.3.0",
    "moto==5.0.21",
    "django-debug-toolbar==5.0.0a0",
    "ruff==0.8.1",
]

deploy = [
    "urllib3==2.2.3",
    "boto3==1.35.71",
]
