[project]
name = "ElectionLeaflets"
version = "0.0.0"
description = "An online archive of political leaflets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-pagination==2.5.0",
    "django-braces==1.16.0",
    "django-extensions==3.2.3",
    "django-filter==25.1",
    "django-formtools==2.2",
    "django-localflavor==4.0",
    "django-pipeline==4.0.0",
    "django-s3file==5.5.7",
    "django-ses==4.4.0",
    "django-static-jquery==2.1.4",
    "django-storages==1.14.5",
    "django==4.2.22",
    "djangorestframework==3.15.2",
    "factory-boy==3.3.3",
    "markdown==3.7",
    "piexif==1.0.12",
    "pillow==11.1.0",
    "psycopg2-binary==2.9.10",
    "sorl-thumbnail==12.11.0",
    "sentry-sdk==2.20.0",
    "python-slugify==8.0.4",
    "requests==2.32.3",
    "aws-wsgi",
    "dc-design-system",
    "dc-django-utils",
    "django-uk-political-parties",
    # Remove this once we are on Django>=5.1
    # https://docs.djangoproject.com/en/5.1/releases/5.1/#querystring-template-tag
    "django-querystring-tag==1.0.3",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["thumbs"]

[tool.uv.sources]
aws-wsgi = { git = "https://github.com/DemocracyClub/awsgi.git", rev = "b286f129c5580547577f942c75be74cdca707386" }
dc-design-system = { git = "https://github.com/DemocracyClub/design-system.git", tag = "0.7.0" }
dc-django-utils = { git = "https://github.com/DemocracyClub/dc_django_utils.git", tag = "8.0.2" }
django-uk-political-parties = { git = "https://github.com/DemocracyClub/django-uk-political-parties.git", rev = "86ffa51f8306858c379c9de5be2f4bdb24b3a910" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "electionleaflets.settings.testing"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db --tb=short -p no:warnings"
django_debug_mode = true

[tool.ruff]
line-length = 80
lint.ignore = ["E501"]
lint.extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-django==4.10.0",
    "pytest-playwright==0.7.0",
    "moto[s3]==5.1.1",
    "django-debug-toolbar==5.0.1",
    "ruff==0.9.10",
]
deploy = [
    "urllib3==2.3.0",
    "boto3==1.37.11",
]
